# aiohttp-s3-client

./: .gitignore  README.md  demo.py  docker-compose.yaml  pylama.ini  pylava.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish.yml  tests.yml  tox.yml
aiohttp_s3_client/: __init__.py  client.py  credentials.py  file_reader.py  file_writer.py  retry.py  version.py  xml.py
tests/: conftest.py  test_credentials.py  test_file_reader.py  test_file_writer.py  test_get_file_parallel.py  test_multipart_upload.py  test_parallel_operation_failure.py  test_retry.py  test_simple.py  test_upload_failure.py
