[tool.poetry]
name = "aiohttp-s3-client"
# This is a dummy version which will be rewritten with poem-plugins
version = "0.8.3"
description = "The simple module for putting and getting object from Amazon S3 compatible endpoints"
authors = [
    "Dmitry Orlov <me@mosquito.su>",
    "Yuri Shikanov <dizballanze@gmail.com>",
    "Alexander Vasin <hi@alvass.in>"
]
license = "Apache Software License"
readme = "README.md"
homepage = "https://github.com/aiokitchen/aiohttp-s3-client"
packages = [{include = "aiohttp_s3_client"}]

[tool.poetry.urls]
"Source" = "https://github.com/aiokitchen/aiohttp-s3-client"
"Tracker" = "https://github.com/aiokitchen/aiohttp-s3-client/issues"

[tool.poetry.dependencies]
aiohttp = "^3"
aiomisc = "^17"
aws-request-signer = "1.0.0"
python = "^3.7"

[tool.poetry.group.dev.dependencies]
aiomisc-pytest = "^1.1"
coverage = "!=4.3"
coveralls = "^3.3.1"
mypy = "^1.0.1"
pylama = "^8.4.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-timeout = "^2.1.0"
tox = "^4.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poem-plugins.version]
provider = "git"
update_pyproject = true
write_version_file = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = ["aiohttp_s3_client", "tests"]

[[tool.mypy.overrides]]
module = ["tests.*"]
check_untyped_defs = true
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
