[tool.poetry]
name = "aiohttp-s3-client"
# Dummy version which will be rewritten with poem-plugins
version = "0.8.16"
description = "The simple module for putting and getting object from Amazon S3 compatible endpoints"
authors = [
    "Dmitry Orlov <me@mosquito.su>",
    "Yuri Shikanov <dizballanze@gmail.com>",
    "Alexander Vasin <hi@alvass.in>"
]
license = "Apache Software License"
readme = "README.md"
homepage = "https://github.com/aiokitchen/aiohttp-s3-client"
packages = [{include = "aiohttp_s3_client"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Microsoft",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.urls]
"Source" = "https://github.com/aiokitchen/aiohttp-s3-client"
"Tracker" = "https://github.com/aiokitchen/aiohttp-s3-client/issues"

[tool.poetry.dependencies]
aiohttp = "^3.8"
aiomisc = "^17"
aws-request-signer = "1.2.0"
cached-property = [{ version = '^1.5.2', python = "< 3.8" }]
typing_extensions = [{ version = '*', python = "< 3.10" }]
python = "^3.7"


[tool.poetry.group.dev.dependencies]
aiomisc-pytest = "^1.1"
coverage = "!=4.3"
coveralls = "^3.3.1"
mypy = "*"
pylama = {extras = ["toml"], version = "^8.4.1"}
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-timeout = "^2.1.0"
tox = "^4.4.6"
pytest-aiohttp = "^1.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poem-plugins.version]
provider = "git"
update_pyproject = true
write_version_file = true

[tool.mypy]
check_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
files = ["aiohttp_s3_client", "tests"]

[tool.pylama]
max_line_length = 80
skip = ".venv*,.*cache,dist"

[tool.pylama.linter.mccabe]
max-complexity = 15
