[project]
name = "aiohttp-s3-client"
version = "1.0.0"
description = "The simple module for putting and getting object from Amazon S3 compatible endpoints"
authors = [
    { name = "Dmitry Orlov", email = "me@mosquito.su" },
    { name = "Yuri Shikanov", email = "dizballanze@gmail.com" },
    { name = "Alexander Vasin", email = "hi@alvass.in" },
]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Microsoft",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiohttp>=3.8,<4",
    "aiomisc>=18,<19",
    "aws-request-signer==1.2.0",
]

[project.urls]
Homepage = "https://github.com/aiokitchen/aiohttp-s3-client"
Source = "https://github.com/aiokitchen/aiohttp-s3-client"
Tracker = "https://github.com/aiokitchen/aiohttp-s3-client/issues"

[dependency-groups]
dev = [
    "aiomisc-pytest",
    "coverage",
    "coveralls",
    "freezegun",
    "mypy",
    "pytest",
    "pytest-aiohttp",
    "pytest-cov",
    "pytest-timeout",
    "ruff",
    "yarl",
]

[tool.uv]

[tool.uv.build-backend]
module-name = ["aiohttp_s3_client"]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.mypy]
check_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
files = ["aiohttp_s3_client", "tests"]

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 15
